add div to hold play again text

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             
         </div>
         <button id="play-button" data-type="submit">Let's Battle!</button>
+        <div id="play-again"></div>
     </div>
     <div class="results-area">
         <p class="results">Battles Won <span id="won">0</span></p>
