--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="results-won">
         <p class="results">Battles Won <span id="won">0</span></p>
     </div>
-    <div class="results-lost"></div>
+    <div class="results-lost">
         <p class="results">Battles Lost <span id="lost">0</span></p>
     </div>
     <script src="assets/js/script.js"></script>
