add You and Computer labels and css styling to them

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         </button>
         </div>
         <div class="battle-ground">
+            <div><span id="you-id">YOU</span>
+            <span id="comp-id">COMPUTER</span></div>
             <span id="user-choice"><i class="fa-regular fa-circle-question"></i></span>
             <span>v</span>
             <span id="computer-choice"><i class="fa-regular fa-circle-question"></i></span>
