--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 
     <div class="game-area"> 
         <div class="user-choices"> Choose Your Weapon...
-        <button data-type="0" id="Rock" class="btn">
+        <button aria-label="rock" data-type="0" id="Rock" class="btn">
             <i class="fa-solid fa-hand-fist"></i>
         </button>
-        <button data-type="1" id="Paper" class="btn">
+        <button aria-label="paper" data-type="1" id="Paper" class="btn">
             <i class="fa-solid fa-hand"></i>
         </button>
-        <button data-type="2" id="Scissors" class="btn">
+        <button aria-label="scissors" data-type="2" id="Scissors" class="btn">
             <i class="fa-solid fa-hand-scissors"></i>
         </button>
-        <button data-type="3" id="Random" class="btn">
+        <button aria-label="random"  data-type="3" id="Random" class="btn">
             <i class="fa-regular fa-circle-question"></i>
         </button>
         </div>
