jshint and W3C validator error corrections

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 </head>
 <body>
     <h1>
-        <img class="logo" src="assets/images/rock-paper-scissors (4).png" alt="logo">
-        <div class="heading">Rock Paper Scissors</div> 
+        <img class="logo" src="assets/images/rock-paper-scissors(4).png" alt="logo">
     </h1>
+    <h2>
+        Rock Paper Scissors
+    </h2>
 
     <div class="game-area"> 
         <div class="user-choices"> Choose Your Weapon...
