general tidy ups and adding comments

--- a/index.html
+++ b/index.html
@@ -52,4 +52,5 @@
     </div>
     <script src="assets/js/script.js"></script>
 </body>
+<a href="https://www.flaticon.com/free-icons/rock-paper-scissors" title="rock paper scissors icons">Rock paper scissors icons created by Freepik - Flaticon</a>
 </html>
