change buttons to divs in user-choices area

--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
 
     <div class="game-area"> 
         <div class="user-choices"> Choose Your Weapon...
-        <button aria-label="rock" data-type="0" id="Rock" class="btn">
+        <div aria-label="rock" data-type="0" id="Rock" class="btn">
             <i class="fa-solid fa-hand-fist"></i>
-        </button>
-        <button aria-label="paper" data-type="1" id="Paper" class="btn">
+        </div>
+        <div aria-label="paper" data-type="1" id="Paper" class="btn">
             <i class="fa-solid fa-hand"></i>
-        </button>
-        <button aria-label="scissors" data-type="2" id="Scissors" class="btn">
+        </div>
+        <div aria-label="scissors" data-type="2" id="Scissors" class="btn">
             <i class="fa-solid fa-hand-scissors"></i>
-        </button>
-        <button aria-label="random"  data-type="3" id="Random" class="btn">
+        </div>
+        <div aria-label="random"  data-type="3" id="Random" class="btn">
             <i class="fa-regular fa-circle-question"></i>
-        </button>
+        </div>
         </div>
         <div class="battle-ground">
             <div><span id="you-id">YOU</span>
