--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <span id="comp-id">COMPUTER</span></div>
             <span id="user-choice"><i class="fa-regular fa-circle-question"></i></span>
             <span>v</span>
-            <span id="computer-choice"><i class="fa-regular fa-circle-question"></i></span>
+            <span id="computer-choice"><i class="fa-solid fa-computer"></i></i></span>
             
         </div>
         <button id="play-button" data-type="submit">Let's Battle!</button>
