added footer and rules of game

--- a/index.html
+++ b/index.html
@@ -52,5 +52,9 @@
     </div>
     <script src="assets/js/script.js"></script>
 </body>
-<a href="https://www.flaticon.com/free-icons/rock-paper-scissors" title="rock paper scissors icons">Rock paper scissors icons created by Freepik - Flaticon</a>
+<footer>
+    <div>How to play: Scissors beats Paper which beats Rock which beats Scissors!</div>
+    <div id="credit"><a href="https://www.flaticon.com/free-icons/rock-paper-scissors" title="rock paper scissors icons">Rock paper scissors icons created by Freepik - Flaticon</a></div>
+</footer>
+
 </html>
