--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
     </h2>
 
     <div class="game-area"> 
-        <div role="button" aria-label="rock" class="user-choices"> Choose Your Weapon...
-        <div data-type="0" id="Rock" class="btn">
+        <div class="user-choices"> Choose Your Weapon...
+        <div  data-type="0" id="Rock" class="btn">
             <i class="fa-solid fa-hand-fist"></i>
         </div>
-        <div role="button" aria-label="paper" data-type="1" id="Paper" class="btn">
+        <div data-type="1" id="Paper" class="btn">
             <i class="fa-solid fa-hand"></i>
         </div>
-        <div role="button" aria-label="scissors" data-type="2" id="Scissors" class="btn">
+        <div data-type="2" id="Scissors" class="btn">
             <i class="fa-solid fa-hand-scissors"></i>
         </div>
-        <div role="button" aria-label="random"  data-type="3" id="Random" class="btn">
+        <div data-type="3" id="Random" class="btn">
             <i class="fa-regular fa-circle-question"></i>
         </div>
         </div>
@@ -55,6 +55,10 @@
         <div id="credit"><a href="https://www.flaticon.com/free-icons/rock-paper-scissors" title="rock paper scissors icons">Rock paper scissors icons created by Freepik - Flaticon</a></div>
     </footer>
     <script src="assets/js/script.js"></script>
+    <footer>
+        <div>How to play: Scissors beats Paper which beats Rock which beats Scissors!</div>
+        <div id="credit"><a href="https://www.flaticon.com/free-icons/rock-paper-scissors" title="rock paper scissors icons">Rock paper scissors icons created by Freepik - Flaticon</a></div>
+    </footer>
 </body>
 
 
